appId: com.tuckbrady.theaxiom
---
- launchApp
- tapOn: "ENTER"
- assertVisible: "TRANSMISSION"
- tapOn: "TRANSMISSION"
- assertVisible: "DAILY CHALLENGE"
